--- a/public/index2.html
+++ b/public/index2.html
@@ -20,6 +20,11 @@
       }
       .hero {
         margin-top: 160px;
+        margin-left: 107px;
+        width: 500px;
+        background-color: rgba(90, 90, 90, 0.5);
+        border-radius: 4px;
+        padding: 20px;
       }
       .hero h1, .hero .lead {
         margin: 0;
