--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <script src="javascripts/libs/toxiclibs.min.js"></script>
     <script src="javascripts/libs/processing-1.4.1.min.js"></script>
     <script data-main="javascripts/main" src="javascripts/libs/require/require.js"></script>
+    <meta name="google-site-verification" content="nq-gJCDWWOd2TtEJ_JXTj3AvvKCUukcUUDEV-q-HsYA" />
   </head>
   <body>
     <style>
