--- a/public/index.html
+++ b/public/index.html
@@ -3,35 +3,152 @@
   <head>
     <title>pinpoint.io</title>
     <link rel='stylesheet' href='/bootstrap/css/bootstrap.min.css' />
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel='stylesheet' href='/stylesheets/etch.css' />
     <script type="text/javascript" src="//use.typekit.net/lpk4dad.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-    <script src="javascripts/libs/toxiclibs.min.js"></script>
-    <script src="javascripts/libs/processing-1.4.1.min.js"></script>
-    <script data-main="javascripts/main" src="javascripts/libs/require/require.js"></script>
-    <meta name="google-site-verification" content="nq-gJCDWWOd2TtEJ_JXTj3AvvKCUukcUUDEV-q-HsYA" />
+    <script src="/javascripts/libs/jquery/jquery-min.js"></script>
   </head>
   <body>
     <style>
-      #triCanvas {
-        position: fixed;
-        left: 0px;
-        right: 0px;
-        margin-top: 48px;
-        top: 0px;
-        bottom: 0px;
-        z-index: 1;
-      }
-      #body {
+      .navbar-wrapper {
         position: relative;
-        z-index: 2;
-        display: none;
+        z-index: 10;
+        margin-top: 20px;
+        margin-bottom: -90px;
+      }
+      .bg {
+        background: url('/images/bg.jpg') center -400px no-repeat;
+        height: 600px;
+      }
+      .hero {
+        margin-top: 160px;
+        margin-left: 107px;
+        width: 500px;
+        background-color: rgba(90, 90, 90, 0.5);
+        border-radius: 4px;
+        padding: 20px;
+      }
+      .hero h1, .hero .lead {
+        margin: 0;
+        line-height: 1.25;
+        color: #fff;
+        text-shadow: 0 1px 1px rgba(0,0,0,.4);
+        margin-bottom: 10px;
+      }
+      .blocks-container {
+        width: 800px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: -80px;
+        text-align: center;
+      }
+      .blocks {
+        display: inline-block;
+        background-color: white;
+        padding: 10px;
+        margin-left: auto;
+        margin-right: auto;
+        border-radius: 4px;
+      }
+      .blocks ul {
+        list-style-type: none;
+        margin: 0px;
+        padding: 0px;
+      }
+      .blocks ul li {
+        float: left;
+        margin: 0px;
+        padding: 0px;
+        padding-right: 10px;
+      }
+      .blocks ul li:last-child {
+        padding-right: 0px;
+      }
+      .blocks ul li img {
+        width: 200px;
+        height: 150px;
+        border-radius: 4px;
+      }
+      .blocks ul li {
+        width: 200px;
+        text-align: left;
       }
     </style>
-    <canvas id="triCanvas"></canvas>
-    <div id="body"></div>
-    <script src="javascripts/tri.js"></script>
+    <div class="container navbar-wrapper">
+      <div class="navbar navbar-inverse">
+        <div class="navbar-inner">
+          <a class="brand" href="#" data-content="home">pinpoint.io</a>
+        </div>
+      </div>
+    </div>
+    <div class="bg">
+      <div class="container">
+        <div class="hero">
+          <h1 class="header"></h1>
+          <p class="lead"></p>
+        </div>
+      </div>
+    </div>
+    <div class="blocks-container">
+      <div class="blocks">
+        <ul>
+          <li class="developers" data-content="developers">
+            <img src="/images/developers.jpg" />
+            <h4>Developers</h4>
+            <p>Just list your skills and we'll find the best fit for you right away.</p>
+          </li>
+          <li class="companies" data-content="companies">
+            <img src="/images/companies.jpg" />
+            <h4>Companies</h4>
+            <p>It can be exhuasting to find the best candidates, so let us search for you.</p>
+          </li>
+          <li class="robots" data-content="robots">
+            <img src="/images/robot.png" />
+            <h4>Robots</h4>
+            <p>*Bleep boop* 010101000100 0100010 10010010 0101000101</p>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <script>
+      $(function() {
+        var content = {
+          'home': {
+            'header': 'Find the right fit',
+            'text': 'Searching for the perfect fit can seem like a daunting task, but pinpoint.io is here for you!'
+          },
+          'developers': {
+            'header': 'We do the search for you',
+            'text': 'Searching for the perfect fit can seem like a daunting task, but pinpoint.io is here for you!'
+          },
+          'companies': {
+            'header': 'Qualified candidates knocking at your door',
+            'text': 'Searching for the perfect fit can seem like a daunting task, but pinpoint.io is here for you!'
+          },
+          'robots': {
+            'header': 'BEEP BOOP',
+            'text': 'KILL ALL HUMANS'
+          }
+        }
+        var switchContent = function(e) {
+          var target = $(e.currentTarget);
+          var dataContent = target.attr('data-content');
+          var contentObject = content[dataContent];
+          var header = contentObject.header;
+          var lead = contentObject.text;
+
+          $(".hero").fadeOut(function() {
+            $(".hero .header").html(header);
+            $(".hero .lead").html(lead);
+            $(".hero").fadeIn();
+          });
+
+          return false;
+        };
+
+        $("[data-content]").click(switchContent);
+        $("a.brand").trigger("click");
+      });
+    </script>
   </body>
 </html>
 
