Little bit of typography css

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       .hero {
         display: none;
         margin-top: 160px;
-        margin-left: 107px;
+        margin-left: 106px;
         width: 500px;
         background-color: rgba(90, 90, 90, 0.5);
         border-radius: 4px;
@@ -73,6 +73,16 @@
         width: 200px;
         text-align: left;
       }
+      .blocks ul li .header {
+        color: #474d5a;
+        font-size: 16px;
+      }
+      .blocks ul li .text {
+        color: #474d5a;
+        font-size: 14px;
+        line-height: 16px;
+        padding-right: 16px;
+      }
     </style>
     <div class="container navbar-wrapper">
       <div class="navbar navbar-inverse">
@@ -94,18 +104,18 @@
         <ul>
           <li class="developers" data-content="developers">
             <img src="/images/developers.jpg" />
-            <h4>Developers</h4>
-            <p>Just list your skills and we'll find the best fit for you right away.</p>
+            <h4 class="header">Developers</h4>
+            <p class="text">Just list your skills and we'll find the best fit for you right away.</p>
           </li>
           <li class="companies" data-content="companies">
             <img src="/images/companies.jpg" />
-            <h4>Companies</h4>
-            <p>It can be exhuasting to find the best candidates, so let us search for you.</p>
+            <h4 class="header">Companies</h4>
+            <p class="text">It can be exhuasting to find the best candidates, so let us search for you.</p>
           </li>
           <li class="robots" data-content="robots">
             <img src="/images/robot.png" />
-            <h4>Robots</h4>
-            <p>*Bleep boop* 010101000100 0100010 10010010 0101000101</p>
+            <h4 class="header">Robots</h4>
+            <p class="text">*Bleep boop* 010101000100 0100010 10010010 0101000101</p>
           </li>
         </ul>
       </div>
