Top navbar instead of offset

--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,6 @@
       .navbar-wrapper {
         position: relative;
         z-index: 10;
-        margin-top: 20px;
-        margin-bottom: -90px;
       }
       .bg {
         background: url('/images/bg.jpg') center -400px no-repeat;
@@ -102,9 +100,9 @@
         padding: 10px;
       }
     </style>
-    <div class="container navbar-wrapper">
-      <div class="navbar navbar-inverse">
-        <div class="navbar-inner">
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
           <a class="brand" href="#" data-content="home">pinpoint.io</a>
         </div>
       </div>
