--- a/public/index.html
+++ b/public/index.html
@@ -131,7 +131,7 @@
           <li class="robots" data-content="robots">
             <img src="/images/robot.png" />
             <h4 class="header">Robots</h4>
-            <p class="text">*Bleep boop* 010101000100 0100010 10010010 0101000101</p>
+            <p class="text">We will give you tuneups and oil required to keep your machinery running smoothly.</p>
           </li>
         </ul>
       </div>
@@ -145,20 +145,20 @@
       $(function() {
         var content = {
           'home': {
-            'header': 'Find the right fit',
+            'header': 'We help you find the right fit',
             'text': 'Searching for the perfect fit can seem like a daunting task, but pinpoint.io is here for you!'
           },
           'developers': {
-            'header': 'We do the search for you',
-            'text': 'Searching for the perfect fit can seem like a daunting task, but pinpoint.io is here for you!'
+            'header': 'Developers - It\'s your search',
+            'text': 'Looking for your next opportunity can be a daunting task.'
           },
           'companies': {
             'header': 'Qualified candidates knocking at your door',
             'text': 'Searching for the perfect fit can seem like a daunting task, but pinpoint.io is here for you!'
           },
           'robots': {
-            'header': 'BEEP BOOP',
-            'text': 'KILL ALL HUMANS'
+            'header': 'Robots - *Bleep bloop*',
+            'text': '01001011 01001001 01001100 01001100 00100000 01000001 01001100 01001100 00100000 01001000 01010101 01001101 01000001 01001110 01010011'
           }
         }
         var switchContent = function(e) {
