front page copy?

--- a/public/index.html
+++ b/public/index.html
@@ -121,12 +121,12 @@
           <li class="developers" data-content="developers">
             <img src="/images/developers_bw.png" />
             <h4 class="header">Developers</h4>
-            <p class="text">Just list your skills and we'll find the best fit for you right away.</p>
+            <p class="text">Just tell us a little bit about who you are, what you do (and what you want to be doing) and we'll find the best fit for you right away.</p>
           </li>
           <li class="companies" data-content="companies">
             <img src="/images/companies_bw.jpg" />
             <h4 class="header">Companies</h4>
-            <p class="text">It can be exhuasting to find the best candidates, so let us search for you.</p>
+            <p class="text">It's a tough time to find developers, especially the right developers, so let us give you a hand.</p>
           </li>
           <li class="robots" data-content="robots">
             <img src="/images/robots_bw.png" />
@@ -145,16 +145,16 @@
       $(function() {
         var content = {
           'home': {
-            'header': 'We help you find the right fit',
-            'text': 'Searching for the perfect fit can seem like a daunting task, but pinpoint.io is here for you!'
+            'header': 'Bringing harmony to Silicon Valley.',
+            'text': 'We are a candidate-focused recruiting agency for developers that can read the code on the wall.'
           },
           'developers': {
             'header': 'Developers - It\'s your search',
-            'text': 'Looking for your next opportunity can be a daunting task.'
+            'text': 'Looking for opportunities can be overwhelming, let pinpoint.io give you a hand.'
           },
           'companies': {
-            'header': 'Qualified candidates knocking at your door',
-            'text': 'Searching for the perfect fit can seem like a daunting task, but pinpoint.io is here for you!'
+            'header': 'Companies - Developers are people too, let us bring them to you.',
+            'text': 'Searching for the right developers can be difficult, but pinpoint.io is here for you!'
           },
           'robots': {
             'header': 'Robots - *Bleep bloop*',
