--- a/public/index.html
+++ b/public/index.html
@@ -85,6 +85,7 @@
       .blocks ul li {
         width: 200px;
         text-align: left;
+        cursor: pointer;
       }
       .blocks ul li .header {
         color: #474d5a;
@@ -124,7 +125,7 @@
             <p class="text">Just tell us a little bit about who you are, what you do (and what you want to be doing) and we'll find the best fit for you right away.</p>
           </li>
           <li class="companies" data-content="companies">
-            <img src="/images/companies_bw.jpg" />
+            <img src="/images/companies_bw.png" />
             <h4 class="header">Companies</h4>
             <p class="text">It's a tough time to find developers, especially the right developers, so let us give you a hand.</p>
           </li>
