--- a/public/index.html
+++ b/public/index.html
@@ -122,17 +122,17 @@
           <li class="developers" data-content="developers">
             <img src="/images/developers_bw.png" />
             <h4 class="header">Developers</h4>
-            <p class="text">Just tell us a little bit about who you are, what you do (and what you want to be doing) and we'll find the best fit for you right away.</p>
+            <p class="text">Just tell us a little bit about who you are, what you do (and what you want to be doing), and we'll find the best fit for you right away.</p>
           </li>
           <li class="companies" data-content="companies">
             <img src="/images/companies_bw.png" />
             <h4 class="header">Companies</h4>
-            <p class="text">It's a tough time to find developers, especially the right developers, so let us give you a hand.</p>
+            <p class="text">It's a tough time to find quality developers that fit your culture, so let us give you a hand.</p>
           </li>
           <li class="robots" data-content="robots">
             <img src="/images/robots_bw.png" />
             <h4 class="header">Robots</h4>
-            <p class="text">We will give you tuneups and oil required to keep your machinery running smoothly.</p>
+            <p class="text">We will give you tuneups and the oil required to keep your machinery running smoothly. O_o</p>
           </li>
         </ul>
       </div>
@@ -147,15 +147,15 @@
         var content = {
           'home': {
             'header': 'Bringing harmony to Silicon Valley.',
-            'text': 'We are a candidate-focused recruiting agency for developers that can read the code on the wall.'
+            'text': 'We are a candidate-focused recruiting agency for developers that knows good code and good matches.'
           },
           'developers': {
             'header': 'Developers - It\'s your search',
             'text': 'Looking for opportunities can be overwhelming, let pinpoint.io give you a hand.'
           },
           'companies': {
-            'header': 'Companies - Developers are people too, let us bring them to you.',
-            'text': 'Searching for the right developers can be difficult, but pinpoint.io is here for you!'
+            'header': 'Companies - Find great developers.',
+            'text': 'Whether you need a read on someone\'s technical skill or fit in your company\'s culture, pinpoint.io is here for you!'
           },
           'robots': {
             'header': 'Robots - *Bleep bloop*',
