--- a/public/index.html
+++ b/public/index.html
@@ -132,7 +132,7 @@
           <li class="robots" data-content="robots">
             <img src="/images/robots_bw.png" />
             <h4 class="header">Robots</h4>
-            <p class="text">We will give you tuneups and the oil required to keep your machinery running smoothly. O_o</p>
+            <p class="text">We will give you the required tuneups and oil to keep your machinery running smoothly.</p>
           </li>
         </ul>
       </div>
@@ -146,16 +146,16 @@
       $(function() {
         var content = {
           'home': {
-            'header': 'Bringing harmony to Silicon Valley.',
-            'text': 'We are a candidate-focused recruiting agency for developers that knows good code and good matches.'
+            'header': 'Bringing harmony to Silicon Valley',
+            'text': 'We are a candidate-focused recruiting agency for developers. We know know good code, and we know what makes a great fit.'
           },
           'developers': {
             'header': 'Developers - It\'s your search',
-            'text': 'Looking for opportunities can be overwhelming, let pinpoint.io give you a hand.'
+            'text': 'Looking for opportunities can be overwhelming, especially in this market. Your time is valuable, so let us give you a hand in figuring out your future.'
           },
           'companies': {
-            'header': 'Companies - Find great developers.',
-            'text': 'Whether you need a read on someone\'s technical skill or fit in your company\'s culture, pinpoint.io is here for you!'
+            'header': 'Companies - Find great developers',
+            'text': 'We know that recruiting can be a huge time commitment. We present you with only great candidates - the best for your company in terms of technical skill and cultural fit.'
           },
           'robots': {
             'header': 'Robots - *Bleep bloop*',
