Fix know-know typo

--- a/public/index.html
+++ b/public/index.html
@@ -147,7 +147,7 @@
         var content = {
           'home': {
             'header': 'Bringing harmony to Silicon Valley',
-            'text': 'We are a candidate-focused recruiting agency for developers. We know know good code, and we know what makes a great fit.'
+            'text': 'We are a candidate-focused recruiting agency for developers. We know good code, and we know what makes a great fit.'
           },
           'developers': {
             'header': 'Developers - It\'s your search',
