--- a/public/index.html
+++ b/public/index.html
@@ -147,15 +147,15 @@
         var content = {
           'home': {
             'header': 'Bringing harmony to Silicon Valley',
-            'text': 'We are a candidate-focused recruiting agency for developers. We know good code, and we know what makes a great fit.'
+            'text': 'Recruiters should be matchmakers, not salesmen. We\'re here to try a new approach to finding talent.<br /><br />We are a candidate-focused recruiting agency for developers. We know good code, and we know what makes a great fit.'
           },
           'developers': {
             'header': 'Developers - It\'s your search',
-            'text': 'Looking for opportunities can be overwhelming, especially in this market. Your time is valuable, so let us give you a hand in figuring out your future.'
+            'text': 'Looking for opportunities can be overwhelming, especially in this market. Your time is valuable, so let us give you a hand in figuring out your future.<br /><br />Did we mention that it\'s free?'
           },
           'companies': {
             'header': 'Companies - Find great developers',
-            'text': 'We know that recruiting can be a huge time commitment. We present you with only great candidates - the best for your company in terms of technical skill and cultural fit.'
+            'text': 'We know that recruiting can be a huge time commitment. We present you with only great candidates - the best for your company in terms of technical skill and cultural fit.<br /><br />Since we\'re using our tech-powered backend to help us find matches, there\'s less overhead, and our fees are much lower than other firms.'
           },
           'robots': {
             'header': 'Robots - *Bleep bloop*',
