--- a/public/index.html
+++ b/public/index.html
@@ -168,7 +168,7 @@
             'text': 'We know that recruiting can be a huge time commitment. We present you with only great candidates - the best for your company in terms of technical skill and cultural fit.<br /><br />Since we\'re using our tech-powered backend to help us find matches, there\'s less overhead, and our fees are much lower than other firms.'
           },
           'robots': {
-            'header': 'Robots - *Bleep bloop*',
+            'header': 'Robots - *BLEEP.bloop*',
             'text': '01001011 01001001 01001100 01001100 00100000 01000001 01001100 01001100 00100000 01001000 01010101 01001101 01000001 01001110 01010011'
           }
         }
