--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>pinpoint.io</title>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel='stylesheet' href='/bootstrap/css/bootstrap.min.css' />
     <script type="text/javascript" src="//use.typekit.net/lpk4dad.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
