--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="//use.typekit.net/lpk4dad.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     <script src="/javascripts/libs/jquery/jquery-min.js"></script>
+    <script data-main="javascripts/main" src="javascripts/libs/require/require.js"></script>
     <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-36545474-1']);
@@ -17,238 +18,9 @@
        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
        })();
      </script>
-  </head>
-  <body>
-    <style>
-      body {
-        font-family: "promixa-nova", Helvetica, Arial, Verdana, sans-serif;
-        font-size: 12px;
-        letter-spacing: 0;
-        line-height: 1.5em;
-        background-color: white
-        font-weight: 300;
-        font-style: normal;
-      }
-
-      h1, h2, h3, h4, h5, h6, h7, .cronos {
-        font-family: "cronos-pro-subhead";
-        font-weight: 300;
-      }
-
-      .navbar-wrapper {
-        position: relative;
-        z-index: 10;
-      }
-      .bg {
-        background: url('/images/bg.jpg') center -400px no-repeat;
-        height: 600px;
-      }
-      .hero {
-        display: none;
-        margin-top: 160px;
-        margin-left: 106px;
-        width: 500px;
-        background-color: rgba(90, 90, 90, 0.5);
-        border-radius: 4px;
-        padding: 20px;
-      }
-      .hero h1, .hero .lead {
-        margin: 0;
-        line-height: 1.25;
-        color: #fff;
-        text-shadow: 0 1px 1px rgba(0,0,0,.4);
-        margin-bottom: 10px;
-      }
-      .blocks-container {
-        width: 800px;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: -80px;
-        text-align: center;
-      }
-      .blocks {
-        display: inline-block;
-        background-color: white;
-        padding: 10px;
-        margin-left: auto;
-        margin-right: auto;
-        border-radius: 4px;
-      }
-      .blocks ul {
-        list-style-type: none;
-        margin: 0px;
-        padding: 0px;
-      }
-      .blocks ul li {
-        float: left;
-        margin: 0px;
-        padding: 0px;
-        padding-right: 10px;
-      }
-      .blocks ul li:last-child {
-        padding-right: 0px;
-      }
-      .blocks ul li img {
-        width: 200px;
-        height: 150px;
-        border-radius: 4px;
-      }
-      .blocks ul li {
-        width: 200px;
-        text-align: left;
-        cursor: pointer;
-      }
-      .blocks ul li .header {
-        color: #474d5a;
-      }
-      .blocks ul li .text {
-        color: #474d5a;
-        padding-right: 16px;
-      }
-      footer p {
-        color: #87909d;
-        border-top: 1px solid #eee;
-        font-size: 12px;
-        padding: 10px;
-      }
-    </style>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="brand" href="#" data-content="home">pinpoint.io</a>
-        </div>
-      </div>
-    </div>
-    <div class="bg">
-      <div class="container">
-        <div class="hero">
-          <h1 class="header"></h1>
-          <p class="lead"></p>
-        </div>
-      </div>
-    </div>
-    <div class="blocks-container">
-      <div class="blocks">
-        <ul>
-          <li class="developers" data-content="developers">
-            <img src="/images/developers_bw.png" />
-            <h4 class="header">Developers</h4>
-            <p class="text">Just tell us a little bit about who you are, what you do (and what you want to be doing), and we'll find the best fit for you right away.</p>
-          </li>
-          <li class="companies" data-content="companies">
-            <img src="/images/companies_bw.png" />
-            <h4 class="header">Companies</h4>
-            <p class="text">It's a tough time to find quality developers that fit your culture, so let us give you a hand.</p>
-          </li>
-          <li class="robots" data-content="robots">
-            <img src="/images/robots_bw.png" />
-            <h4 class="header">Robots</h4>
-            <p class="text">We will give you the required tuneups and oil to keep your machinery running smoothly.</p>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <footer>
-      <div class="container">
-        <p>pinpoint.io | &copy; Tigerlily Labs, Inc. 2012 | <a href="mailto:team@pinpoint.io" target="_blank">Contact us!</a></p>
-      </div>
-    </footer>
-    <script>
-      $(function() {
-        var content = {
-          'home': {
-            'header': 'Bringing harmony to Silicon Valley',
-            'text': 'Recruiters should be matchmakers, not salesmen. We\'re here to try a new approach to finding talent.<br /><br />We are a candidate-focused recruiting agency for developers. We know good code, and we know what makes a great fit.'
-          },
-          'developers': {
-            'header': 'Developers - It\'s your search',
-            'text': 'Looking for opportunities can be overwhelming, especially in this market. Your time is valuable, so let us give you a hand in figuring out your future.<br /><br />Did we mention that it\'s free?'
-          },
-          'companies': {
-            'header': 'Companies - Find great developers',
-            'text': 'We know that recruiting can be a huge time commitment. We present you with only great candidates - the best for your company in terms of technical skill and cultural fit.<br /><br />Since we\'re using our tech-powered backend to help us find matches, there\'s less overhead, and our fees are much lower than other firms.'
-          },
-          'robots': {
-            'header': 'Robots - *BLEEP.bloop*',
-            'text': '01001011 01001001 01001100 01001100 00100000 01000001 01001100 01001100 00100000 01001000 01010101 01001101 01000001 01001110 01010011'
-          }
-        }
-        var switchContent = function(e) {
-          $(".blocks li").removeClass("active");
-          var target = $(e.currentTarget);
-          target.addClass("active");
-          var dataContent = target.attr('data-content');
-          switch(dataContent) {
-            case "developers":
-              $(".blocks li.companies img").attr("src", "/images/companies_bw.png");
-              $(".blocks li.robots img").attr("src", "/images/robots_bw.png");
-            break;
-            case "companies":
-              $(".blocks li.developers img").attr("src", "/images/developers_bw.png");
-              $(".blocks li.robots img").attr("src", "/images/robots_bw.png");
-            break;
-            case "robots":
-              $(".blocks li.developers img").attr("src", "/images/developers_bw.png");
-              $(".blocks li.companies img").attr("src", "/images/companies_bw.png");
-            break;
-            case "home":
-              $(".blocks li.developers img").attr("src", "/images/developers_bw.png");
-              $(".blocks li.companies img").attr("src", "/images/companies_bw.png");
-              $(".blocks li.robots img").attr("src", "/images/robots_bw.png");
-            break;
-          }
-          var contentObject = content[dataContent];
-          var header = contentObject.header;
-          var lead = contentObject.text;
-          $(".hero").hide();
-          $(".hero .header").html(header);
-          $(".hero .lead").html(lead);
-          $(".hero").fadeIn();
-          return false;
-        };
-
-        $("[data-content]").click(switchContent);
-        var contentObject = content["home"];
-        var header = contentObject.header;
-        var lead = contentObject.text;
-        $(".hero .header").html(header);
-        $(".hero .lead").html(lead);
-        $(".hero").fadeIn();
-      });
-
-      $("li.developers").hover(function() {
-        $(this).find("img").attr("src", "/images/developers.png");
-      }, function() {
-        if (!$(this).hasClass("active")) {
-          $(this).find("img").attr("src", "/images/developers_bw.png");
-        }
-      });
-      $("li.companies").hover(function() {
-        $(this).find("img").attr("src", "/images/companies.png");
-      }, function() {
-        if (!$(this).hasClass("active")) {
-          $(this).find("img").attr("src", "/images/companies_bw.png");
-        }
-      });
-      $("li.robots").hover(function() {
-        $(this).find("img").attr("src", "/images/robots.png");
-      }, function() {
-        if (!$(this).hasClass("active")) {
-          $(this).find("img").attr("src", "/images/robots_bw.png");
-        }
-      });
-
-      function preload(arrayOfImages) {
-        $(arrayOfImages).each(function(){
-          $('<img/>')[0].src = this;
-        });
-      }
-      preload([
-        '/images/developers.png',
-        '/images/companies.png',
-        '/images/robots.png'
-      ]);
-      </script>
-    </body>
-  </html>
+   </head>
+   <body>
+     <div id="body"></div>
+   </body>
+ </html>
 
